tests/compile_fail/state/no_enter_def.stderr
error: a struct with fields must manually implement the `State::enter` function
  --> tests/compile_fail/state/no_enter_def.rs:18:10
   |
18 |     impl State<BlinkyState> for Bottom {}
   |          ^^^^^
